<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="${relativePackage}.${activityClass}" 
    android:orientation="vertical"
    >

   <HorizontalScrollView 
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:id="@+id/hzoview"
         android:scrollbars="none"
         >
         
       
       <RadioGroup 
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:id="@+id/radiogroup"
             android:background="#ffffff"
           >
         <RadioButton 
                 android:id="@+id/one"
                 style="@style/layout_style"
                 android:text="@string/china"
             />

         <RadioButton
             android:id="@+id/twee"
             style="@style/layout_style"
             android:text="@string/cao" />

          <RadioButton 
               android:id="@+id/three"
               style="@style/layout_style"
               android:text="@string/han"
               
             />
           <RadioButton 
               android:id="@+id/four"
               style="@style/layout_style"
               android:text="@string/japan"
               
             />
            <RadioButton 
               android:id="@+id/five"
               style="@style/layout_style"
               android:text="@string/amrica"
               
             />
             <RadioButton 
               android:id="@+id/sex"
               style="@style/layout_style"
               android:text="@string/india"
               
             />
              <RadioButton 
               android:id="@+id/seven"
               style="@style/layout_style"
               android:text="@string/tai"
               
             />
               <RadioButton 
               android:id="@+id/eight"
               style="@style/layout_style"
               android:text="@string/ying"
               
             />
           
       </RadioGroup>
   </HorizontalScrollView>
  <FrameLayout 
          android:layout_width="fill_parent"
          android:layout_height="2dp"
       >
      <TextView
        android:layout_width="100dp"
        android:layout_height="3dp"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="2dp"
        android:id="@+id/txt_line"
        android:background="#000000"
        />
        
  </FrameLayout>
    
 <android.support.v4.view.ViewPager
        android:layout_marginTop="10dp"
	    android:layout_width="fill_parent"
	    android:layout_height="330dp"
	    android:background="#e7df07"
	    android:id="@+id/viewpager"
	    ></android.support.v4.view.ViewPager>
   <LinearLayout 
          android:layout_width="fill_parent"
          android:layout_height="fill_parent"
          android:background="#160606"
          android:layout_marginTop="5dp"   
          android:orientation="horizontal"
        >
      <!--  
       <android:support.v4.view.ViewPager
         android:layout_width="180dp"
         android:layout_height="180dp"
         android:id="@+id/viewpager_left"
          android:background="#ffffff"
         ></android:support.v4.view.ViewPager>
         <android:support.v4.view.ViewPager
         android:layout_width="180dp"
         android:layout_height="180dp"
         android:layout_toLeftOf="@id/viewpager_left"
         android:layout_marginLeft="10dp"
         android:id="@+id/viewpager_right"
          android:background="#000000"
         ></android:support.v4.view.ViewPager>-->
       <ImageView
             android:id="@+id/img_left"
             android:layout_width="150dp"
             android:layout_height="150dp"
           ></ImageView>
       
          <ImageView
             android:id="@+id/img_right"
             android:layout_width="150dp"
             android:layout_height="150dp"
             android:layout_marginLeft="20dp"             
           ></ImageView>
           </LinearLayout>
</LinearLayout>
